[EATON-380][EATON-625] FIX - Update padding / spacing in Product-grid-sku module

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
@@ -15,6 +15,8 @@
 
 .product-card-sku__name, .product-card-sku__price, .product-card-sku__name a { color: #FFF; }
 
+.product-card-sku__name { margin-bottom: 5px; }
+
 .product-card-sku__name .icon, .product-card-sku__link-item .icon { font-size: 1rem; }
 
 .product-card-sku__image-link { display: block; }
@@ -25,7 +27,7 @@
 
 .product-card-sku__links-list { list-style-type: none; margin: 0; padding: 0; }
 
-.product-card-sku__attr-label { margin-bottom: 5px; }
+.product-card-sku__attr-label { margin-bottom: 2px; }
 
 @media screen and (max-width: 991px) { .product-card-sku { margin-left: -30px; margin-right: -30px; }
   .product-card-sku__image-wrapper { left: 30px; top: 20px; }
@@ -51,13 +53,15 @@
   .product-card-sku__name .icon { font-size: 26px; position: relative; top: 4px; }
   .product-card-sku__price { position: absolute; top: 50%; right: 20px; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
   .product-card-sku__links-list { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-flow: row nowrap; -ms-flex-flow: row nowrap; flex-flow: row nowrap; }
-  .product-card-sku__link-item { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.4rem; border-right: 1px solid #FFF; margin-right: 20px; padding-right: 16px; }
-  .product-card-sku__link-item:last-child { border-right: 0; }
+  .product-card-sku__link-item { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.4rem; position: relative; margin-right: 20px; padding-right: 16px; }
+  .product-card-sku__link-item::after { content: ''; background-color: #FFF; height: 18px; position: absolute; right: 0; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); width: 1px; }
+  .product-card-sku__link-item:last-child::after { content: none; display: none; }
   .product-card-sku__link-item-link .link-label { color: #FFF; }
   .product-card-sku__link-item-link:hover { color: #FFF; text-decoration: underline; }
   .product-card-sku__content { margin-top: 30px; margin-bottom: 60px; padding-left: 188px; }
   .product-card-sku__attrs-list { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-flow: row wrap; -ms-flex-flow: row wrap; flex-flow: row wrap; margin-bottom: 30px; }
-  .product-card-sku__attrs-list-item { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
+  .product-card-sku__attrs-list-item { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; padding-right: 20px; word-wrap: break-word; }
+  .product-card-sku__attrs-list-item:last-child { padding-right: 0; }
   .product-card-sku__description { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.4rem; } }
 
 .product-grid-results--subcategory .results-list__content { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
